--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
       <script src="components/json3/lib/json3.min.js"></script>
     <![endif]-->
      <!-- build:js scripts/scripts.js -->
+    <script src="lib/jquery.js"></script>
     <script src="components/angular/angular.js"></script>
     <script src="components/angular-resource/angular-resource.js"></script>
     <script src="components/angular-cookies/angular-cookies.js"></script>
