--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/bootstrap.css">
     <link rel="stylesheet" href="styles/bootstrap-responsive.css">
     <link rel="stylesheet" href="styles/bootswatch.css">
+    <link rel="stylesheet" href="styles/select2.css">
     <link rel="stylesheet" href="styles/login.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -26,12 +27,17 @@
     <![endif]-->
      <!-- build:js scripts/scripts.js -->
     <script src="lib/jquery.js"></script>
+    <script src="lib/select2.js"></script>
     <script src="components/angular/angular.js"></script>
     <script src="components/angular-resource/angular-resource.js"></script>
     <script src="components/angular-cookies/angular-cookies.js"></script>
     <script src="components/angular-sanitize/angular-sanitize.js"></script>
     <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="components/angular-ui/common/module.js"></script>
+    <script src="components/angular-ui/modules/directives/if/if.js"></script>
+    <script src="components/angular-ui-select2/src/select2.js"></script>
     
+    <script src="scripts/common.js"></script>
     <script src="scripts/main.js"></script>
     <script src="scripts/controllers/login_manager.js"></script>
     <script src="scripts/controllers/user.js"></script>
