--- a/app/index.html
+++ b/app/index.html
@@ -49,17 +49,20 @@
     <script src="scripts/controllers/home.js"></script>
     <script src="scripts/controllers/supermercati.js"></script>
     <script src="scripts/controllers/prodotti.js"></script>
+    <script src="scripts/controllers/carico.js"></script>
     <!-- endbuild -->
     
     <!-- Add your site or application content here -->
     <div ng-view></div>
     
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <!--
     <script>
       var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
       (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
       g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
       s.parentNode.insertBefore(g,s)}(document,'script'));
     </script>
+-->
   </body>
 </html>
