Added cache, resource files

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
     <script src="bower_components/angular-ui/modules/directives/if/if.js"></script>
     <script src="bower_components/select2/select2.js"></script>
     <script src="bower_components/angular-ui-select2/src/select2.js"></script>
+    <script src="bower_components/angular-upload/file-upload.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/scripts.js -->
@@ -52,6 +53,8 @@
     <script src="scripts/controllers/supermercati.js"></script>
     <script src="scripts/controllers/prodotti.js"></script>
     <script src="scripts/controllers/carico.js"></script>
+    <script src="scripts/controllers/catene.js"></script>
+    <script src="scripts/controllers/files.js"></script>
     <!-- endbuild -->
     
     <!-- Add your site or application content here -->
