Added files upload management

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
       <script src="components/json3/lib/json3.min.js"></script>
     <![endif]-->
     <script src="bower_components/jquery/jquery.js"></script>
+    <script src="bower_components/jquery/jquery.form.min.js"></script>
     <script src="lib/lodash.js"></script>
     <script src="bower_components/angular/angular.js"></script>
 
@@ -40,12 +41,13 @@
     <script src="bower_components/angular-ui/modules/directives/if/if.js"></script>
     <script src="bower_components/select2/select2.js"></script>
     <script src="bower_components/angular-ui-select2/src/select2.js"></script>
-    <script src="bower_components/angular-upload/file-upload.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/common.js"></script>
     <script src="scripts/main.js"></script>
+
+        <!-- controllers -->
     <script src="scripts/controllers/login_manager.js"></script>
     <script src="scripts/controllers/admin.js"></script>
     <script src="scripts/controllers/user.js"></script>
@@ -55,6 +57,13 @@
     <script src="scripts/controllers/carico.js"></script>
     <script src="scripts/controllers/catene.js"></script>
     <script src="scripts/controllers/files.js"></script>
+
+    <!-- directives -->
+    <script src="scripts/directives/file-upload.js"></script>
+    <!-- factories -->
+    <script src="scripts/factories/filesUpload.js"></script>
+    <!-- services -->
+    <script src="scripts/services/colletta.js"></script>
     <!-- endbuild -->
     
     <!-- Add your site or application content here -->
