bug fxes, added pagination

--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,9 @@
     <script src="scripts/factories/filesUpload.js"></script>
     <!-- services -->
     <script src="scripts/services/colletta.js"></script>
+    <script src="scripts/services/comuni.js"></script>
+    <script src="scripts/services/catene.js"></script>
+    <script src="scripts/services/capi_equipe.js"></script>
     <!-- endbuild -->
     
     <!-- Add your site or application content here -->
