adding pagination - fixes filtering and minor bugs

--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
     <script src="scripts/services/comuni.js"></script>
     <script src="scripts/services/catene.js"></script>
     <script src="scripts/services/capi_equipe.js"></script>
+    <script src="scripts/services/user.js"></script>
     <!-- endbuild -->
     
     <!-- Add your site or application content here -->
