fixed remove carico bug

--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
     <script src="scripts/services/carico.js"></script>
     <script src="scripts/services/supermercato.js"></script>
     <script src="scripts/services/supermercati.js"></script>
+    <script src="scripts/services/prodotti.js"></script>
     <script src="scripts/services/serverAddress.js"></script>
     <script src="scripts/services/version.js"></script>
     <script src="scripts/services/adminPages.js"></script>
