--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
     <script src="scripts/services/colletta.js"></script>
     <script src="scripts/services/comuni.js"></script>
     <script src="scripts/services/provincie.js"></script>
+    <script src="scripts/services/aree.js"></script>
     <script src="scripts/services/catene.js"></script>
     <script src="scripts/services/capi_equipe.js"></script>
     <script src="scripts/services/user.js"></script>
@@ -87,6 +88,7 @@
     <script src="scripts/services/serverAddress.js"></script>
     <script src="scripts/services/version.js"></script>
     <script src="scripts/services/adminPages.js"></script>
+    <script src="scripts/services/filter.js"></script>
     <!-- endbuild -->
     
     <!-- Add your site or application content here -->
