--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,7 @@
     <script src="scripts/services/version.js"></script>
     <script src="scripts/services/adminPages.js"></script>
     <script src="scripts/services/filter.js"></script>
+    <script src="scripts/services/dialogSupermercato.js"></script>
     <!-- endbuild -->
     
     <!-- Add your site or application content here -->
