fixing promises and deferred

--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
     <script src="scripts/services/aree.js"></script>
     <script src="scripts/services/catene.js"></script>
     <script src="scripts/services/capi_equipe.js"></script>
+    <script src="scripts/services/capi_equipe_supermercati.js"></script>
     <script src="scripts/services/user.js"></script>
     <script src="scripts/services/carico.js"></script>
     <script src="scripts/services/supermercato.js"></script>
