--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
     <script src="scripts/services/version.js"></script>
     <script src="scripts/services/adminPages.js"></script>
     <script src="scripts/services/filter.js"></script>
+    <script src="scripts/services/report.js"></script>
     <script src="scripts/services/dialogSupermercato.js"></script>
     <!-- endbuild -->
     
