excel report fixed :) !

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
     <script src="scripts/common.js"></script>
     <script src="scripts/main.js"></script>
 
-        <!-- controllers -->
+    <!-- controllers -->
     <script src="scripts/controllers/login_manager.js"></script>
     <script src="scripts/controllers/admin.js"></script>
     <script src="scripts/controllers/user.js"></script>
@@ -64,6 +64,7 @@
     <script src="scripts/directives/file-upload.js"></script>
     <script src="scripts/directives/toggleAll.js"></script>
     <script src="scripts/directives/isNumber.js"></script>
+    <script src="scripts/directives/keyboard_interceptor.js"></script>
     <!-- factories -->
     <script src="scripts/factories/filesUpload.js"></script>
     <script src="scripts/factories/GetInfo.js"></script>
