adding loaders, add fontawesome

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="styles/select2.css">
     <link rel="stylesheet" href="styles/login.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.min.css">
     <!-- endbuild -->
   </head>
   <body ng-app="collettaApp" class="index" id="top">
@@ -92,6 +93,7 @@
     <script src="scripts/services/adminPages.js"></script>
     <script src="scripts/services/filter.js"></script>
     <script src="scripts/services/report.js"></script>
+    <script src="scripts/services/feedback.js"></script>
     <script src="scripts/services/dialogSupermercato.js"></script>
     <!-- endbuild -->
     
