Comuni with id_area :)

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="styles/select2.css">
     <link rel="stylesheet" href="styles/login.css">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles/font-awesome.min.css">
     <!-- endbuild -->
   </head>
   <body ng-app="collettaApp" class="index" id="top">
@@ -26,10 +26,10 @@
       <script src="components/es5-shim/es5-shim.js"></script>
       <script src="components/json3/lib/json3.min.js"></script>
     <![endif]-->
-    <script src="bower_components/jquery/jquery.js"></script>
+    <script src="bower_components/jquery/jquery.min.js"></script>
     <script src="bower_components/jquery/jquery.form.min.js"></script>
     <script src="lib/lodash.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular/angular.min.js"></script>
 
     <!-- build:js scripts/plugins.js -->
     <script src="lib/select2.js"></script>
