--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
     <script src="scripts/controllers/home.js"></script>
     <script src="scripts/controllers/supermercati.js"></script>
     <script src="scripts/controllers/supermercato.js"></script>
+    <script src="scripts/controllers/capi_equipe.js"></script>
     <script src="scripts/controllers/prodotti.js"></script>
     <script src="scripts/controllers/catene.js"></script>
     <script src="scripts/controllers/files.js"></script>
